Added Notification area chart api response part
